kubernetes/c4-customer.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: c4-customer
    labels:
      app: c4-customer
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: c4-customer
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: c4-customer-env
    labels:
      app: c4-customer
  data:
    AMQP_URI: "amqp://guest:guest@rabbitmq.message.svc.cluster.local:5672/"
    POSTGRES_ADDRS: "postgresql://postgres:pgpassword@postgres-postgresql.database.svc.cluster.local:5432?sslmode=disable"
    PORT: "8080"
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: c4-customer
    labels:
      version: v1
      app: c4-customer
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: c4-customer
    template:
      metadata:
        labels:
          version: v1
          app: c4-customer
      spec:
        containers:
        - name: c4-customer
          image: fernandocagale/c4-customer
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: c4-customer-virtual-service
  spec:
    hosts:
    - "*"
    gateways:
    - application-gateway-c4
    http:
    - match:
      - uri:
          prefix: /customers
      route:
      - destination:
          host: c4-customer
          port:
            number: 8080
